test_src/compiler_errors/literals/LongTooLargeError4.b
class LongTooLargeError4 {
    void test() {
        println(-9223372036854775809L);
    }
}
